--- a/platformio.ini
+++ b/platformio.ini
@@ -4,14 +4,20 @@
 [platformio]
 src_dir = ./wled00
 data_dir = ./wled00/data
-lib_extra_dirs = ./wled00/src
+;lib_extra_dirs = ./wled00/src
+lib_dir = ./wled00/src
 ; Please uncomment one of the 5 lines below to select your board
-; env_default = nodemcuv2
-; env_default = esp01
-; env_default = esp01_1m
-; env_default = d1_mini
-; env_default = esp32dev
-
+; default_envs = nodemcuv2
+; default_envs = esp01
+; default_envs = esp01_1m
+; default_envs = esp07
+; default_envs = d1_mini
+; default_envs = esp32dev
+; default_envs = esp8285_4CH_MagicHome
+; default_envs = esp8285_4CH_H801
+; default_envs = esp8285_5CH_H801
+; default_envs = wio_link
+default_envs = fairynest
 
 [common]
 framework = arduino
@@ -23,22 +29,35 @@ build_flags =
   -w ; supresses all C/C++ warnings
   ; -D VERSION=0.8.5
   ; -D DEBUG
+  #build_flags for the IRremoteESP8266 library (enabled decoders have to appear here)
+  -D _IR_ENABLE_DEFAULT_=false 
+  -D DECODE_HASH=true 
+  -D DECODE_NEC=true
+  -D DECODE_SONY=true 
+  -D DECODE_SAMSUNG=true
+  -D DECODE_LG=true
+
 # TODO replace libs in /lib with managed libs in here if possible.
 # If they are not changed it's just a matter of setting the correct version and change the import statement
 lib_deps_external =
   #Blynk@0.5.4(changed)
   #E131@1.0.0(changed)
   FastLED@3.3.2
-  NeoPixelBus@2.5.1
+  NeoPixelBus@2.5.6
   ESPAsyncTCP@1.2.0
   ESPAsyncUDP@697c75a025
   AsyncTCP@1.0.3
   Esp Async WebServer@1.2.0
   #ArduinoJson@5.13.5
-  IRremoteESP8266@2.5.5
+  #IRremoteESP8266@2.7.2
+  https://github.com/crankyoldgit/IRremoteESP8266.git
   #Time@1.5
   #Timezone@1.2.1
-
+  #For use SSD1306 0.91" OLED display uncomment following
+  #U8g2@~2.27.2
+  #For Dallas sensor uncomment following 2 lines
+  #DallasTemperature@~3.8.0
+  #OneWire@~2.3.5
 [common:esp8266]
 # ------------------------------------------------------------------------------
 # PLATFORM:
@@ -77,7 +96,7 @@ build_flags =
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
   ; -D WLED_DISABLE_HUESYNC
-  -D WLED_DISABLE_INFRARED
+  ; -D WLED_DISABLE_INFRARED
 
 [common:esp8266_512k]
 platform = espressif8266@1.8.0
@@ -89,15 +108,14 @@ build_flags =
   ; -D WLED_DISABLE_ALEXA
   -D WLED_DISABLE_BLYNK
   -D WLED_DISABLE_CRONIXIE
-  ; -D WLED_DISABLE_HUESYNC
-  -D WLED_DISABLE_INFRARED
+  -D WLED_DISABLE_HUESYNC
+  ; -D WLED_DISABLE_INFRARED
 
 [common:esp32]
 platform = espressif32@1.11.1
 build_flags =
   -D PIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH
   -D ARDUINO_ARCH_ESP32
-  -D WLED_DISABLE_INFRARED
 
 # see: http://docs.platformio.org/en/latest/platforms/espressif8266.html
 [env:nodemcuv2]
@@ -147,6 +165,19 @@ framework = ${common.framework}
 build_flags =
   ${common.build_flags}
   ${common:esp8266_512k.build_flags}
+  -D WLED_DISABLE_INFRARED
+lib_deps =
+  ${common.lib_deps_external}
+
+[env:esp07]
+board = esp07
+platform = ${common:esp8266.platform}
+monitor_speed = ${common.monitor_speed}
+upload_speed = ${common.upload_speed}
+framework = ${common.framework}
+build_flags =
+  ${common.build_flags}
+  ${common:esp8266.build_flags}
 lib_deps =
   ${common.lib_deps_external}
 
@@ -163,5 +194,77 @@ build_flags =
 lib_deps =
   ${common.lib_deps_external}
 lib_ignore =
-  IRremoteESP8266
   ESPAsyncUDP
+
+[env:esp8285_4CH_MagicHome]
+board = esp8285
+platform = ${common:esp8266_1M.platform}
+monitor_speed = ${common.monitor_speed}
+upload_speed = ${common.upload_speed}
+framework = ${common.framework}
+build_flags =
+  ${common.build_flags}
+  ${common:esp8266_1M.build_flags}
+  -D WLED_DISABLE_HUESYNC
+  -D WLED_USE_ANALOG_LEDS
+lib_deps =
+  ${common.lib_deps_external}
+
+[env:esp8285_4CH_H801]
+board = esp8285
+platform = ${common:esp8266_1M.platform}
+monitor_speed = ${common.monitor_speed}
+upload_speed = ${common.upload_speed}
+framework = ${common.framework}
+build_flags =
+  ${common.build_flags}
+  ${common:esp8266_1M.build_flags}
+  -D WLED_DISABLE_HUESYNC
+  -D WLED_USE_ANALOG_LEDS
+  -D WLED_USE_H801
+lib_deps =
+  ${common.lib_deps_external}
+
+[env:esp8285_5CH_H801]
+board = esp8285
+platform = ${common:esp8266_1M.platform}
+monitor_speed = ${common.monitor_speed}
+upload_speed = ${common.upload_speed}
+framework = ${common.framework}
+build_flags =
+  ${common.build_flags}
+  ${common:esp8266_1M.build_flags}
+  -D WLED_DISABLE_HUESYNC
+  -D WLED_USE_ANALOG_LEDS
+  -D WLED_USE_H801
+  -D WLED_ENABLE_5CH_LEDS 
+lib_deps =
+  ${common.lib_deps_external}
+  
+[env:fairynest]
+board = esp8285
+platform = ${common:esp8266_1M.platform}
+; platform = espressif8266
+; platform = ${common:esp8266.platform}
+framework = ${common.framework}
+monitor_speed = ${common.monitor_speed}
+upload_speed = ${common.upload_speed}
+build_flags =
+  ${common.build_flags}
+  ${common:esp8266_1M.build_flags}
+  -D FAIRYNEST
+lib_deps =
+  ${common.lib_deps_external}
+
+[env:wio_link]
+board = wio_link
+platform = ${common:esp8266.platform}
+monitor_speed = ${common.monitor_speed}
+upload_speed = ${common.upload_speed}
+framework = ${common.framework}
+build_flags =
+  ${common.build_flags}
+  ${common:esp8266.build_flags}
+  -D WIOLINK
+lib_deps =
+  ${common.lib_deps_external}
