--- a/platformio.ini
+++ b/platformio.ini
@@ -32,18 +32,18 @@ build_flags =
   #build_flags for the IRremoteESP8266 library (enabled decoders have to appear here)
   -D PIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH
   -D _IR_ENABLE_DEFAULT_=false 
-  -D DECODE_HASH=true 
-  -D DECODE_NEC=true
-  -D DECODE_SONY=true 
-  -D DECODE_SAMSUNG=true
-  -D DECODE_LG=true
+  ;-D DECODE_HASH=true 
+  ;-D DECODE_NEC=true
+  ;-D DECODE_SONY=true 
+  ;-D DECODE_SAMSUNG=true
+  ;-D DECODE_LG=true
 
 # TODO replace libs in /lib with managed libs in here if possible.
 # If they are not changed it's just a matter of setting the correct version and change the import statement
 lib_deps_external =
   #Blynk@0.5.4(changed)
   #E131@1.0.0(changed)
-  FastLED@3.3.2
+  FastLED@3.3.3
   NeoPixelBus@2.5.6
   ESPAsyncTCP@1.2.0
   ESPAsyncUDP@697c75a025
@@ -53,7 +53,7 @@ lib_deps_external =
   #IRremoteESP8266@2.7.2
   https://github.com/crankyoldgit/IRremoteESP8266.git
   #Time@1.5
-  #Timezone@1.2.1
+  #Timezone@1.2.3
   #For use SSD1306 0.91" OLED display uncomment following
   #U8g2@~2.27.2
   #For Dallas sensor uncomment following 2 lines
@@ -80,6 +80,7 @@ arduino_core_2_5_0 = espressif8266@2.0.4
 arduino_core_2_5_2 = espressif8266@2.2.3
 arduino_core_2_6_1 = espressif8266@2.3.0
 arduino_core_2_6_2 = espressif8266@2.3.1
+arduino_core_2_6_3 = espressif8266@2.3.2
 arduino_core_stage = https://github.com/platformio/platform-espressif8266.git#feature/stage
 platform = ${common:esp8266.arduino_core_2_6_2}
 build_flags =
@@ -89,7 +90,7 @@ build_flags =
 [common:esp8266_1M]
 platform = espressif8266@1.8.0
 build_flags =
-  -D PIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH
+  -D PIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH  
   -Wl,-Teagle.flash.1m0.ld  ;;;; Compile with no SPIFFS to leave space for OTA
   ; -D WLED_DISABLE_MOBILE_UI
   ; -D WLED_DISABLE_OTA
@@ -241,7 +242,20 @@ build_flags =
   -D WLED_ENABLE_5CH_LEDS 
 lib_deps =
   ${common.lib_deps_external}
-  
+
+[env:wio_link]
+board = wio_link
+platform = ${common:esp8266.platform}
+monitor_speed = ${common.monitor_speed}
+upload_speed = ${common.upload_speed}
+framework = ${common.framework}
+build_flags =
+  ${common.build_flags}
+  ${common:esp8266.build_flags}
+  -D WIOLINK
+lib_deps =
+  ${common.lib_deps_external}
+
 [env:fairynest]
 board = esp8285
 platform = ${common:esp8266_1M.platform}
@@ -256,16 +270,6 @@ build_flags =
   -D FAIRYNEST
 lib_deps =
   ${common.lib_deps_external}
+upload_protocol = espota
+upload_port = 192.168.1.56
 
-[env:wio_link]
-board = wio_link
-platform = ${common:esp8266.platform}
-monitor_speed = ${common.monitor_speed}
-upload_speed = ${common.upload_speed}
-framework = ${common.framework}
-build_flags =
-  ${common.build_flags}
-  ${common:esp8266.build_flags}
-  -D WIOLINK
-lib_deps =
-  ${common.lib_deps_external}
